--- a/henry.html
+++ b/henry.html
@@ -34,12 +34,14 @@ body {
       gap: 1rem;
     }
 
-    .gallery img {
-      width: 300px;
-      height: 500px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
+   .gallery img {
+  width: 300px;
+  height: 350px; /* smaller than before */
+  object-fit: cover; /* crops instead of distorting */
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
 
     .back-button {
       display: inline-block;
@@ -73,4 +75,5 @@ body {
   <a class="back-button" href="index.html">← Back to Main</a>
 </body>
 </html>
+
 
