--- a/henry.html
+++ b/henry.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -36,7 +36,7 @@ body {
 
     .gallery img {
       width: 300px;
-      height: 600px; 
+      height: auto; 
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
@@ -73,4 +73,5 @@ body {
   <a class="back-button" href="index.html">← Back to Main</a>
 </body>
 </html>
+
 
