--- a/henry.html
+++ b/henry.html
@@ -36,7 +36,7 @@ body {
 
     .gallery img {
       width: 300px;
-      height: auto; 
+      height: 500px; 
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
@@ -73,5 +73,6 @@ body {
   <a class="back-button" href="index.html">← Back to Main</a>
 </body>
 </html>
+
 
 
